--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@ body {
   font-family: Consolas;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: white;
 }
 
 code {
   font-family: Consolas;
 }
+
+
